ctowasm/test/samples/error/incomplete_type.c
int main() {
    struct X x;
}